src/test/ui/did_you_mean/issue-38147-2.stderr
error[E0596]: cannot borrow borrowed content `*self.s` of immutable binding as mutable
  --> $DIR/issue-38147-2.rs:7:9
   |
LL |     s: &'a String
   |        ---------- use `&'a mut String` here to make mutable
...
LL |         self.s.push('x');
   |         ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
